fix mobile spacing

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -375,7 +375,9 @@ a:focus {
 .plans-table {
   @include make-row();
 
-  margin-top: 140px;
+  @media (min-width: 768px) {
+    margin-top: 140px;
+  }
 }
 .plans-table__item {
   @extend .list-unstyled;
@@ -413,17 +415,24 @@ a:focus {
     @extend .visible-xs-inline-block;
     color: rgba(255,255,255,0.5);
   }
+
+  @media (max-width: 767px) {
+    margin-top: 100px;
+  }
 }
 
 .plan-heading {
   font-family: 'Dosis';
   font-size: 22px;
   text-transform: uppercase;
-  height: 100px;
   color: transparent;
   -moz-background-clip: text;
   -webkit-background-clip: text;
   background-clip: text;
+
+  @media (min-width: 768px) {
+    height: 100px;
+  }
 }
 
 .plan-cta {
